Bug 1177452: Ensure start time is always calculated on first frame decoding. r=jwwang